--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -68,5 +68,5 @@ jobs:
     - name: 触发上传至阿里云
       run: |
         docker login -u ${{ secrets.ALIYUN_USERNAME }} -p ${{ secrets.ALIYUN_PASSWORD }} registry.cn-shanghai.aliyuncs.com
-        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/v2ray:${{ matrix.DOCKER_TAG }} registry.cn-shanghai.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/v2ray:${{ matrix.DOCKER_TAG }}
-        docker push registry.cn-shanghai.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/v2ray:${{ matrix.DOCKER_TAG }}
+        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/v2ray:latest registry.cn-shanghai.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/v2ray:latest
+        docker push registry.cn-shanghai.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/v2ray:latest
