--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,20 +43,37 @@ jobs:
     steps:
     
     # 检出master分支
-    - name: 检出master分支
+    - name: Check out code into the Go module directory
       uses: actions/checkout@v2
-  
-    - name: 构建镜像并发布Dockerhub
-      uses: docker/build-push-action@v1
       with:
-        push: true
+        fetch-depth: 0
+
+    - name: 安装 QEMU
+      uses: docker/setup-qemu-action@v1
+      with:
+        platforms: all
+
+    - name: 安装 docker buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+      with:
+        version: latest
+
+    - name: 登录 DockerHub
+      uses: docker/login-action@v1
+      with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: danxiaonuo/v2ray
-        tags: ${{ matrix.DOCKER_TAG }}
-        dockerfile: Dockerfile
-        path: .
-        
+  
+    - name: 构建镜像并发布Dockerhub
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/amd64,linux/arm/v7,linux/arm64
+        push: true
+        tags: danxiaonuo/v2ray:${{ matrix.DOCKER_TAG }}
+      
     - name: 上传至阿里云
       run: |
         docker login -u ${{ secrets.ALIYUN_USERNAME }} -p ${{ secrets.ALIYUN_PASSWORD }} registry.cn-hongkong.aliyuncs.com
