--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -77,8 +77,12 @@ jobs:
         cache-to: type=inline
       
     - name: 上传至阿里云
-      run: |
-        sudo docker images
-        docker login -u ${{ secrets.ALIYUN_USERNAME }} -p ${{ secrets.ALIYUN_PASSWORD }} registry.cn-hongkong.aliyuncs.com
-        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/v2ray:${{ matrix.DOCKER_TAG }} registry.cn-hongkong.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/v2ray:${{ matrix.DOCKER_TAG }}
-        docker push registry.cn-hongkong.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/v2ray:${{ matrix.DOCKER_TAG }}
+      uses: risfeng/docker-image-build-push-action@v1.0
+      with:
+        registry_url: 'registry.cn-hongkong.aliyuncs.com'
+        namespaces: 'danxiaonuo'
+        repository_name: 'v2ray'
+        user_name: ${{ secrets.ALIYUN_USERNAME }}
+        password: ${{ secrets.ALIYUN_PASSWORD }}
+        image_version: ${{ matrix.DOCKER_TAG }}
+        docker_file: '.'
