--- a/conf/nginx/ssl/xiaonuo.live/xiaonuo.live.conf
+++ b/conf/nginx/ssl/xiaonuo.live/xiaonuo.live.conf
@@ -5,11 +5,11 @@ add_header alt-svc 'h3-27=":443"; ma=86400, h3-25=":443"; ma=86400, h3-24=":443"
 # 开启 SSL 功能
 # ssl on;
 # 修改这里，SSL 证书文件路径，由证书签发机构提供
-ssl_certificate  /ssl/v2ray-tw-1.xiaonuo.live/xiaonuo.live.pem;
+ssl_certificate  /ssl/xiaonuo.live/xiaonuo.live.pem;
 # 修改这里，SSL 密钥文件路径，由证书签发机构提供
-ssl_certificate_key /ssl/v2ray-tw-1.xiaonuo.live/xiaonuo.live.key;
+ssl_certificate_key /ssl/xiaonuo.live/xiaonuo.live.key;
 # 修改这里，CA 根证书文件路径，由证书签发机构提供
-ssl_trusted_certificate /ssl/v2ray-tw-1.xiaonuo.live/origin_ca_rsa_root.pem;
+ssl_trusted_certificate /ssl/xiaonuo.live/origin_ca_rsa_root.pem;
 # 修改这里，Diffie-Hellman 密钥文件路径，建议定期更改
 # 生成方法: openssl dhparam -out dhparam.pem 4096
 # ssl_dhparam /ssl/dhparam.pem;
