--- a/conf/nginx/vhost/v2ray.conf
+++ b/conf/nginx/vhost/v2ray.conf
@@ -1,13 +1,16 @@
-upstream v2ray-tw-1 {
+upstream v2ray-home {
   server v2ray:8080;
 }
 server { 
     #指定编码
     charset utf-8;
+    #端口
+    listen 80;
+    listen [::]:80;
     #域名
-    server_name v2ray-tw-1.xiaonuo.live;
+    server_name _;
     # 开启SSL
-    include /ssl/v2ray-tw-1.xiaonuo.live/v2ray-tw-1.xiaonuo.live.conf;
+    include /ssl/xiaonuo.live/xiaonuo.live.conf;
     #启用流量控制
     #限制当前站点最大并发数
     #limit_conn perserver 200;
@@ -18,11 +21,11 @@ server {
     # 根目录
     root /www/video;
     #关联缓存配置
-    #include cache.conf;
+    # include cache.conf;
     #关联php配置
-    #include php.conf;
+    # include php.conf;
     # 开启rewrite
-    #include /rewrite/v2ray-tw-1.xiaonuo.live.conf;
+    # include /rewrite/xiaonuo.live.conf;
     #站点索引设置
     index forum.php index.html index.htm default.php default.htm default.html index.php;
     # 路由
@@ -30,7 +33,7 @@ server {
              # 开启websocket
              include websocket.conf;
              # 反向代理
-             proxy_pass http://v2ray-tw-1;
+             proxy_pass http://v2ray-home;
              # 日志
              access_log logs/v2ray.log combined;
              error_log logs/v2ray.log error;
