--- a/conf/nginx/proxy.conf
+++ b/conf/nginx/proxy.conf
@@ -21,39 +21,39 @@ set_real_ip_from 2405:8100::/32;
 set_real_ip_from 2c0f:f248::/32;
 set_real_ip_from 2a06:98c0::/29;
 real_ip_header CF-Connecting-IP;
-real_ip_recursive on;
-#获取原始IP地址
-map $http_x_forwarded_for $clientRealip {
-   "" $remote_addr;
-   ~^(?P<firstAddr>[0-9\.]+),?.*$  $firstAddr;
-}
-#将被代理服务器的响应头中的location字段进行修改后返回给客户端
+# 获取原始IP地址
+# map $http_x_forwarded_for $clientRealip {
+#   "" $remote_addr;
+#   ~^(?P<firstAddr>[0-9\.]+),?.*$  $firstAddr;
+#}
+# 将被代理服务器的响应头中的location字段进行修改后返回给客户端
 proxy_redirect off;
-#nginx跟后端服务器连接超时时间
+# nginx跟后端服务器连接超时时间
 proxy_connect_timeout 300s;
-#后端服务器的数据回传时间
+# 后端服务器的数据回传时间
 proxy_send_timeout 900;
-#连接成功后，后端服务器响应时间
+# 连接成功后，后端服务器响应时间
 proxy_read_timeout 900;
-#设置代理服务器保存用户头信息的缓冲区大小
-proxy_buffer_size 32k;
+# 设置代理服务器保存用户头信息的缓冲区大小
+proxy_buffer_size 2408kk;
 #proxy_buffers缓冲区
-proxy_buffers 4 64k;
-#高负荷下缓冲大小（proxy_buffers*2）
-proxy_busy_buffers_size 128k;
-#设置额外的响应头，这些响应头也不会发送给客户端
+proxy_buffers 32 2408k;
+# 高负荷下缓冲大小（proxy_buffers*2）
+proxy_busy_buffers_size 2408k;
+# 设置额外的响应头，这些响应头也不会发送给客户端
 proxy_hide_header  Vary;
-#缓冲区代理缓冲用户端请求的最大字节数
-client_body_buffer_size 512k;
-#增加故障转移，如果后端的服务器返回502、504、执行超时等错误，自动将请求转发到upstream负载均衡池中的另一台服务器
+# 缓冲区代理缓冲用户端请求的最大字节数
+client_body_buffer_size 2408k;
+# 增加故障转移，如果后端的服务器返回502、504、执行超时等错误，自动将请求转发到upstream负载均衡池中的另一台服务器
 proxy_next_upstream error timeout invalid_header http_500 http_503 http_404 http_403;
-#添加服务器地址到报文头部
-add_header X_Via   $server_addr;
-proxy_hide_header  Set-Cookie;
+# 添加服务器地址到报文头部
+# add_header X_Via   $server_addr;
+# proxy_hide_header  Set-Cookie;
 proxy_set_header   Accept-Encoding '';
 proxy_set_header   Host   $http_host;
 proxy_set_header   Referer $http_referer;
 proxy_set_header   Cookie $http_cookie;
-proxy_set_header   X-Real-IP $clientRealip;
+proxy_set_header X-Real-IP $remote_addr;
+# proxy_set_header   X-Real-IP $clientRealip;
 proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header   X-Forwarded-Proto $scheme;
